Code simplification